--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.4",
     "multer": "^1.4.2"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
