--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.4",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.14"
   },
   "engines": {
     "node": "14.x"
